# Pragmatic

./: .gitignore  .gitmodules  DistributePyPI.py  Pragmatic-runner.py  README.md  SourceDistribution.py  pragmatic_runner.py  setup.py  test.py
.github/workflows/: LLVM.yml  Pragmatic.yml  PragmaticPlugin.yml
Pragmatic/: ArgParser.py  FileUtils.py  GetRelease.py  Pragmatic.py  Registry.py  Stuff.py  __init__.py  __main__.py  graph_build.py  json_patcher.py
PragmaticPlugin/: CMakeLists.txt
PragmaticPlugin/Scripts/: Build.py  Configure.py  Deploy.py  GetLLVM.py  get_LLVM.py
PragmaticPlugin/Source/: BuildTypePragmaHandler.cpp  BuildTypePragmaHandler.hpp  Globals.cpp  Pragmatic.cpp  PreamblePragmaHandler.cpp  PreamblePragmaHandler.hpp  PythonPragmaHandler.hpp
Scripts/LLVM/: Build.py  Configure.py  Install.py
Scripts/Utility/: make_virtual_environment.py  publish.py  push_tags.py
Tests/Hello/: .gitignore  Hello.cpp  Hello.hpp  Main.cpp
pragmatic/: .gitignore  __init__.py  __main__.py  build_options.py  graph.py  node.py  pragmatic.py  shared.py  utility.py
pragmatic/include/: preamble.h
pragmatic/pragmatic_plugin/: CMakeLists.txt  test.cpp  test.hpp
pragmatic/pragmatic_plugin/debug/: .gitignore  debug_source.cpp  debug_source.hpp  debug_source.ii  meta.json  other.cpp  other.hpp  test.cpp
pragmatic/pragmatic_plugin/source/: BuildTypePragmaHandler.cpp  Callbacks.cpp  Callbacks.hpp  Compile.cpp  Compile.hpp  DirectoryPragmaHandler.cpp  DirectoryPragmaHandler.hpp  Globals.hpp  IncludeHandler.cpp  IncludeHandler.hpp  LanguageOptions.cpp  LanguageOptions.hpp  Meta.cpp  Meta.hpp  PragmaHandler.cpp  PragmaHandler.hpp  Pragmatic.cpp  PreamblePragmaHandler.cpp  PreamblePragmaHandler.hpp  PythonPragmaHandler.cpp  Relations.cpp  Relations.hpp  SourcePragmaHandler.cpp  SourcePragmaHandler.hpp  StandardPragmaHandler.cpp  StandardPragmaHandler.hpp  TargetPragmaHandler.cpp  TargetPragmaHandler.hpp  Utility.hpp
pragmatic/templates/: index.html
scripts/: configure_llvm.py  install_llvm.py  make_virtual_environment.py  publish.py
tests/: .gitignore  test_runner.py
tests/0_VirtualEnvironment/: __init__.py
tests/1_HelloWorld/: __init__.py
tests/2_Standard/: Main.cpp  Standard.cpp  __init__.py
tests/3_MultiSource/: Main.cpp  SharedSettings.hpp  SomeClass.cpp  SomeClass.hpp  __init__.py
tests/HelloWorld/: Hello.cpp  test.py
tests/basic/: .gitignore  Foo.cpp  Foo.hpp  basic.cpp  basic.hpp
tests/multi_project/: Application.bc  Application.ii  Application.s  SomeLibrary.cpp  SomeLibrary.hpp
